--- a/Pikachu Game/Pikachu Game.vcxproj
+++ b/Pikachu Game/Pikachu Game.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GTutorial.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
   </ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GTutorial.h" />
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
