--- a/Pikachu Game/Pikachu Game.vcxproj
+++ b/Pikachu Game/Pikachu Game.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GTutorial.cpp" />
+    <ClCompile Include="Leaderboard.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
   </ItemGroup>
@@ -151,6 +152,7 @@
     <ClInclude Include="Board.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GTutorial.h" />
+    <ClInclude Include="Leaderboard.h" />
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
